fix(sbb-calendar): fix overflow

--- a/src/elements/dialog/dialog/dialog.scss
+++ b/src/elements/dialog/dialog/dialog.scss
@@ -145,7 +145,6 @@
 
   @include sbb.mq($from: large) {
     border-radius: var(--sbb-dialog-border-radius);
-    overflow: hidden;
     height: auto;
   }
 }
